@@ -1,0 +1,3 @@
+Site URL: https://www.japteenx.com/
+Contact: https://www.japteenx.com/feedback
+DMCA: https://www.japteenx.com/static/dmca
